--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -21,6 +21,7 @@
         <!-- Control de luces-->
         <android.support.v7.widget.CardView
             android:foreground="?android:attr/selectableItemBackground"
+            android:id="@+id/control_button"
             android:clickable="true"
             android:layout_width="160dp"
             android:layout_height="160dp"
